--- a/src/app/mainComponents/home-page-component/home-page-component.html
+++ b/src/app/mainComponents/home-page-component/home-page-component.html
@@ -354,7 +354,7 @@
     <div class="container pt-5 pb-3">
         <div class="text-center mb-3 pb-3">
             <h6 class="text-primary text-uppercase" style="letter-spacing: 5px;">Team</h6>
-            <h1>Our Team Member</h1>
+            <h1>Our Global Associates</h1>
         </div>
         <div class="row">
             <div class="col-lg-3 col-md-4 col-sm-6 pb-2">
@@ -447,7 +447,7 @@
                         <p class="m-0">
                             <a href="https://wa.me/94705812860" target="_blank"
                                 style="color: #25D366; text-decoration: none;">
-                                <i class="fab fa-whatsapp"></i> +94 70 581 2860
+                                <i class="fab fa-whatsapp"></i> +49 1522 1349382
                             </a>
                         </p>
                     </div>
