--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,9 +1,9 @@
 /******* Bootstrap Theming ********/
 
-$primary: #261124;
+$primary: #155A65;
 $secondary: lighten($primary, 50%);
 $light: #FFFFFF;
-$dark: #212121;
+$dark: #155A65;
 
 $font-family-sans-serif: 'Poppins', sans-serif;
 
