--- a/src/app/mainComponents/home-page-component/home-page-component.html
+++ b/src/app/mainComponents/home-page-component/home-page-component.html
@@ -3,7 +3,7 @@
     <div id="header-carousel" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img class="w-100" src="assets/img/mainpage/1.jpeg" alt="Image">
+                <img class="w-100" src="assets/img/mainpage/1.jpg" alt="Image">
                 <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                     <div class="p-3" style="max-width: 900px;">
                         <h4 class="text-white text-uppercase mb-md-3">Tours & Travel</h4>
@@ -13,7 +13,7 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <img class="w-100" src="assets/img/mainpage/2.jpeg" alt="Image">
+                <img class="w-100" src="assets/img/mainpage/2.jpg" alt="Image">
                 <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                     <div class="p-3" style="max-width: 900px;">
                         <h4 class="text-white text-uppercase mb-md-3">Tours & Travel</h4>
@@ -23,7 +23,7 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <img class="w-100" src="assets/img/mainpage/3.jpeg" alt="Image">
+                <img class="w-100" src="assets/img/mainpage/3.jpg" alt="Image">
                 <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                     <div class="p-3" style="max-width: 900px;">
                         <h4 class="text-white text-uppercase mb-md-3">Tours & Travel</h4>
@@ -33,7 +33,7 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <img class="w-100" src="assets/img/mainpage/4.jpeg" alt="Image">
+                <img class="w-100" src="assets/img/mainpage/4.jpg" alt="Image">
                 <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                     <div class="p-3" style="max-width: 900px;">
                         <h4 class="text-white text-uppercase mb-md-3">Tours & Travel</h4>
@@ -43,7 +43,7 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <img class="w-100" src="assets/img/mainpage/5.jpeg" alt="Image">
+                <img class="w-100" src="assets/img/mainpage/5.jpg" alt="Image">
                 <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                     <div class="p-3" style="max-width: 900px;">
                         <h4 class="text-white text-uppercase mb-md-3">Tours & Travel</h4>
@@ -53,7 +53,7 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <img class="w-100" src="assets/img/mainpage/6.jpeg" alt="Image">
+                <img class="w-100" src="assets/img/mainpage/6.jpg" alt="Image">
                 <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                     <div class="p-3" style="max-width: 900px;">
                         <h4 class="text-white text-uppercase mb-md-3">Tours & Travel</h4>
