--- a/src/app/mainComponents/layout-component/layout-component.html
+++ b/src/app/mainComponents/layout-component/layout-component.html
@@ -2,9 +2,9 @@
 
     <!-- Left side: email & phone -->
     <div class="d-inline-flex align-items-center">
-        <p class="mb-0 nav-link"><i class="fa fa-envelope mr-2"></i>ceylonparadisetou@gmail.com</p>
+        <p class="mb-0 nav-link"><i class="fa fa-envelope mr-2"></i>ceylonjojotravels@gmail.com</p>
         <p class="text-body px-3 mb-0">|</p>
-        <p class="mb-0 nav-link"><i class="fa fa-phone-alt mr-2"></i>+41 79 413 22 63</p>
+        <p class="mb-0 nav-link"><i class="fa fa-phone-alt mr-2"></i>+44 7375 612946</p>
     </div>
 
     <!-- Right side: social icons -->
@@ -36,8 +36,8 @@
         <nav class="navbar navbar-expand-lg navbar-color navbar-light shadow-lg py-3 py-lg-0 ">
             <a href="" class="navbar-brand">
                 <h1 class="m-0 nav-link"><span class="text-white">
-                        <img src="assets/img/logo.jpg" alt="Logo" style="width: 60px; height: 60px;">
-                        CEYLON PARADISE TRAVER</span>LS</h1>
+                        <img src="assets/img/TLogo.png" alt="Logo" style="width: 60px; height: 60px;">
+                        CEYLON JOJO TRAVE</span>LS</h1>
             </a>
             <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
