--- a/src/app/mainComponents/layout-component/layout-component.html
+++ b/src/app/mainComponents/layout-component/layout-component.html
@@ -9,6 +9,11 @@
 
     <!-- Right side: social icons -->
     <div class="d-inline-flex align-items-center">
+          <div class="ml-3">
+
+    <div class="elfsight-app-ef87654d-df1d-400e-b01f-05eebae1ea0d"
+         data-elfsight-app-lazy></div>
+  </div>
         <a class="btn nav-link btn-square mr-2" href="https://www.facebook.com/ceylonparadisetour" target="_blank">
             <i class="fab fa-facebook-f"></i>
         </a>
