--- a/src/app/mainComponents/layout-component/layout-component.css
+++ b/src/app/mainComponents/layout-component/layout-component.css
@@ -103,7 +103,7 @@ body { top: 0px !important; }
   display: flex;
   align-items: center;
   gap: 6px;
-  background: #0f3f46;        /* dark pill */
+  background: #2d585f;        /* dark pill */
   padding: 4px 8px;
   border-radius: 999px;
   margin-right: 12px;
