--- a/src/app/mainComponents/home-page-component/home-page-component.html
+++ b/src/app/mainComponents/home-page-component/home-page-component.html
@@ -369,13 +369,13 @@
                         </div>
                     </div>
                     <div class="text-center py-4">
-                        <h5 class="text-truncate">Sachitha Chandimal</h5>
+                        <h5 class="text-truncate">Danula Nimneth</h5>
                         <p class="m-0">Co-Owner</p>
-                        <p class="m-0">Sri Lanka</p>
+                        <p class="m-0">United Kingdom</p>
                         <p class="m-0">
-                            <a href="https://wa.me/94705812860" target="_blank"
+                            <a href="https://wa.me/+447375612946" target="_blank"
                                 style="color: #25D366; text-decoration: none;">
-                                <i class="fab fa-whatsapp"></i> +94 70 581 2860
+                                <i class="fab fa-whatsapp"></i> +44 7375 612946
                             </a>
                         </p>
                     </div>
@@ -384,7 +384,7 @@
             <div class="col-lg-3 col-md-4 col-sm-6 pb-2">
                 <div class="team-item bg-white mb-4">
                     <div class="team-img position-relative overflow-hidden">
-                        <img class="img-fluid w-100" src="assets/img/Team/2.jpg" alt="">
+                        <img class="img-fluid w-100" src="assets/img/Team/2.jpeg" alt="">
                         <div class="team-social">
                             <!-- <a class="btn btn-outline-primary btn-square" href=""><i class="fab fa-twitter"></i></a>
                             <a class="btn btn-outline-primary btn-square" href=""><i class="fab fa-facebook-f"></i></a>
@@ -393,13 +393,13 @@
                         </div>
                     </div>
                     <div class="text-center py-4">
-                        <h5 class="text-truncate">Thilina De Silva</h5>
+                        <h5 class="text-truncate">Dilan Lakshitha</h5>
                         <p class="m-0">Co-Owner</p>
-                        <p class="m-0">Switzerland</p>
+                        <p class="m-0">Sri Lanka</p>
                         <p class="m-0">
-                            <a href="https://wa.me/94705812860" target="_blank"
+                            <a href="https://wa.me/94714293585" target="_blank"
                                 style="color: #25D366; text-decoration: none;">
-                                <i class="fab fa-whatsapp"></i> +41 79 413 22 63
+                                <i class="fab fa-whatsapp"></i> +94 71 429 3585
                             </a>
                         </p>
                     </div>
@@ -421,7 +421,7 @@
                         <p class="m-0">Senior Consultant</p>
                         <p class="m-0">Italy</p>
                         <p class="m-0">
-                            <a href="https://wa.me/94705812860" target="_blank"
+                            <a href="https://wa.me/393802621167" target="_blank"
                                 style="color: #25D366; text-decoration: none;">
                                 <i class="fab fa-whatsapp"></i> +39 380 262 1167
                             </a>
@@ -441,13 +441,13 @@
                         </div>
                     </div>
                     <div class="text-center py-4">
-                        <h5 class="text-truncate">Sanjaya Gunesekera</h5>
+                        <h5 class="text-truncate">Yohan Malshika</h5>
                         <p class="m-0">Senior Consultant</p>
-                        <p class="m-0">Germany</p>
+                        <p class="m-0">Malaysia</p>
                         <p class="m-0">
-                            <a href="https://wa.me/94705812860" target="_blank"
+                            <a href="https://wa.me/60175047956" target="_blank"
                                 style="color: #25D366; text-decoration: none;">
-                                <i class="fab fa-whatsapp"></i> +49 1522 1349382
+                                <i class="fab fa-whatsapp"></i> +60 17-504 7956
                             </a>
                         </p>
                     </div>
