--- a/src/app/mainComponents/layout-component/layout-component.html
+++ b/src/app/mainComponents/layout-component/layout-component.html
@@ -14,10 +14,10 @@
     <div class="elfsight-app-ef87654d-df1d-400e-b01f-05eebae1ea0d"
          data-elfsight-app-lazy></div>
   </div>
-        <a class="btn nav-link btn-square mr-2" href="https://www.facebook.com/ceylonparadisetour" target="_blank">
+        <a class="btn nav-link btn-square mr-2" href="https://www.facebook.com/ceylonjojotravels/" target="_blank">
             <i class="fab fa-facebook-f"></i>
         </a>
-        <a class="btn nav-link btn-square nav-link px-3" href="https://www.instagram.com/ceylonparadisetravels/"><i
+        <a class="btn nav-link btn-square nav-link px-3" href="https://www.instagram.com/ceylon_jojo_travels"><i
                 class="fab fa-instagram"></i></a>
         <a class="btn nav-link btn-square mr-2"
             href="https://www.tripadvisor.com/Attraction_Review-g304136-d23872015-Reviews-Ceylon_Paradise_Travels-Kalutara_Western_Province.html"
@@ -31,7 +31,7 @@
 <!-- Topbar End -->
 
 <app-scroll-to-to-component></app-scroll-to-to-component>
-<a href="https://wa.me/41794132263" target="_blank" class="whatsapp-float">
+<a href="https://wa.me/447375612946" target="_blank" class="whatsapp-float">
     <i class="fab fa-whatsapp"></i>
 </a>
 
@@ -75,18 +75,18 @@
         <div class="col-lg-3 col-md-6">
             <a class="navbar-brand">
                 <h5 class=""><span class="text-white">
-                        CEYLON PARADISE TRAVERLS</span></h5>
+                        CEYLON JOJO TRAVERLS</span></h5>
             </a>
             <p>Your trusted travel partner in Sri Lanka, offering guided tours, round trips, and tailor-made holiday
                 experiences with reliable service.</p>
             <h6 class="text-white text-uppercase mt-4 mb-3" style="letter-spacing: 5px;">Follow Us</h6>
             <div class="d-flex justify-content-start">
-                <a class="btn nav-link btn-square mr-2" href="https://www.facebook.com/ceylonparadisetour"
+                <a class="btn nav-link btn-square mr-2" href="https://www.facebook.com/ceylonjojotravels/"
                     target="_blank">
                     <i class="fab fa-facebook-f"></i>
                 </a>
                 <a class="btn nav-link btn-square nav-link px-3"
-                    href="https://www.instagram.com/ceylonparadisetravels/"><i class="fab fa-instagram"></i></a>
+                    href="https://www.instagram.com/ceylon_jojo_travels"><i class="fab fa-instagram"></i></a>
                 <a class="btn nav-link btn-square mr-2"
                     href="https://www.tripadvisor.com/Attraction_Review-g304136-d23872015-Reviews-Ceylon_Paradise_Travels-Kalutara_Western_Province.html"
                     target="_blank">
@@ -117,10 +117,10 @@
         </div>
         <div class="col-lg-3 col-md-6 mb-5">
             <h5 class="text-white text-uppercase mb-4" style="letter-spacing: 5px;">Contact Us</h5>
-            <p><i class="fa fa-map-marker-alt mr-2"></i>123 Street, New York, USA</p>
-            <p><i class="fa fa-map-marker-alt mr-2"></i> 24/1A 1st Lane , Kalutara North, Sri Lanka</p>
-            <p><i class="fa fa-phone-alt mr-2"></i>+41 79 413 22 63</p>
-            <p><i class="fa fa-envelope mr-2"></i>ceylonparadisetou@gmail.com</p>
+            <p><i class="fa fa-map-marker-alt mr-2"></i>No 111/3 , Dediyawala Rd, Maha Waskaduwa , Waskaduwa , Sri Lanka</p>
+            <p><i class="fa fa-map-marker-alt mr-2"></i> 100 Garden Lane Chester , UK</p>
+            <p><i class="fa fa-phone-alt mr-2"></i>+44 7375 612946</p>
+            <p><i class="fa fa-envelope mr-2"></i>ceylonjojotravels@gmail.com</p>
             <h6 class="text-white text-uppercase mt-4 mb-3" style="letter-spacing: 5px;">Newsletter</h6>
             <div class="w-100">
                 <div class="input-group">
